
=======================================================
            WanT code:  Log of Changes 
=======================================================


May 26 2010      configure flag --enable-etsf-io removed. (AF)

-------------------------------------------------
Date: 15 Apr 2010    Version: WanT-2.3.0
-------------------------------------------------

Apr 11 2010      WanT manual updated. (AF)

Apr 10 2010      Test suite further cleaned. explicit check on ETSF-IO support 
                 added. Bug fixed in overlaps and projections under the option
                 gamma_only. (AF)

Apr 09 2010      Cleanup of hamiltonian data in trnasport. 
                 test12 updated, including references. 
                 Bug fixed in configure when issued with --with-etsf-io flag. 
                 Interface to abinit 6.0.3 checked. libtest updated. (AF)

Apr 08 2010      gamma_only option spreaded to plot.x .
                 Test03 and Test04 updated. Overall documentation updated. 
                 Test13 finalized and added to repository. Test14 added. (AF)

Apr 07 2010      gamma_only option included in ccalbec. Test04 updated. 
                 Parallelism over kpt included in plot.x . (AF)

Apr 06 2010      Configure wrapper updated. Eigenchannel writing fixed. 
                 Bug fixed in the implementation of overlaps within gamma_only. 
                 Test03 and Test04 updated. (AF)

Apr 02 2010      Bug fixed in the write_eigchn procedure (conductor). 
                 Cleanup of the transport part. Test11 updated. 
                 nproc > nkpts allowed. (AF)

18 Mar 2010      configure.ac updated using todays QE cvs version. Changes to
                 makefile system (in particular related to the build_date var). 
                 ~want/install dir added. (AF)

16 Mar 2010      Portability on Sun f95 compiler added. (AF)

15 Mar 2010      iotk moved to extlibs. A number of related minor changes done. 