@@ -4,6 +4,8 @@
 =======================================================
 
 
+May 29 2012      qexml.f90 lib updated according to QE-5.0. (AF)
+
 May 26 2010      configure flag --enable-etsf-io removed. (AF)
 
 -------------------------------------------------
